--- a/src/SubtitleEdit.csproj
+++ b/src/SubtitleEdit.csproj
@@ -32,7 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\FFMPEG\Captura\src\AYoutuber\bin\Debug\</OutputPath>
+    <OutputPath>..\..\FFMPEG\Captura\src\AYoutuber\SubTitleEdit\</OutputPath>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>true</UseVSHostingProcess>
     <WarningLevel>4</WarningLevel>
